<resources>
    <string name="app_name">Gestor</string>
    <string name="nombre_app">Bety</string>
    <string name="version">Version 1.0</string>
    <string name="desarrollador">DEVys code</string>
    <string name="devyscode">DEVys code</string>
    <string name="mensaje_dev">Ing. Bety Guzmán</string>


    <!--CONTROLES GENERALES-->
    <string name="nuevo">Nuevo</string>
    <string name="guardar">Guardar</string>
    <string name="listar">Listar</string>
    <string name="editar">Editar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="ver_detalle">Ver detalles</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="datos">Datos:</string>
    <string name="volver">Volver</string>
    <string name="ingresar_controlgeneral">Ingresar</string>
    <string name="aviso_aplicativo">Aviso de Aplicativo</string>
    <string name="seleccione_opcion">Seleccione una opción</string>


    <!--LOGIN-->
    <string name="login">Login</string>
    <string name="usuario">usuario</string>
    <string name="clave">clave</string>
    <string name="olvidaste_contrasena">Olvidaste la contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="web">Página web</string>
    <string name="no_regisrado">No tienes cuenta?? Regístrate</string>

    <!--REGISTRO-->
    <string name="titulo_registro">Registro de Usuarios</string>
    <string name="ingrese_datos">Ingrese Datos</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ingrese_apellido">Ingrese Apellido</string>
    <string name="correo">Correo</string>
    <string name="ingrese_correo">Ingrese Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingrese_contrasena">Ingrese Contraseña</string>
    <string name="contrasena_repetida">Confirmar contraseña </string>
    <string name="ingrese_contrasena_repetida">Ingrese la Contraseña nuevamente</string>
    <string name="celular">Número celular</string>
    <string name="ingrese_celular">Ingrese Celular</string>
    <string name="registrar">Registrar</string>
    <string name="ir_login">Ir al Login</string>


    <!--DASHBOARD-->
    <string name="bienvenido">Bienvenido!!!</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="correo_usuario">Correo Usuario</string>
    <string name="identificador">Identificador</string>
    <string name="clientes">Clientes</string>
    <string name="tipo_cliente">Tipo de Cliente</string>
    <string name="tareas">Tareas</string>
    <string name="lista_tareas">Lista de Tareas</string>
    <string name="favoritos">Prioridades</string>
    <string name="desarrollado"> Desarrollado por </string>

    <!--TIPO CLIENTES-->
    <string name="agregar_tipo_cliente">Agregar tipo de Cliente</string>
    <string name="editar_tipo_cliente">Editar tipo de Cliente</string>
    <string name="registrar_tipo_cliente">Registrar tipo de Cliente</string>
    <string name="actualizar_tipo_cliente">Actualizar tipo de Cliente</string>

    <!--CLIENTES-->
    <string name="agregar_cliente">Agregar Cliente</string>
    <string name="editar_cliente">Editar Cliente</string>
    <string name="registrar_cliente">Registrar Cliente</string>
    <string name="actualizar_cliente">Actualizar Cliente</string>
    <string name="tipo_documento">Tipo de Documento</string>
    <string name="num_documento">Número de Documento</string>
    <string name="nombre_cliente">Nombre</string>
    <string name="seleccion_tipo_cliente">Seleccione el tipo de cliente</string>


    <!--TAREAS-->
    <string name="agregar_tareas">Registrar Tareas</string>
    <string name="titulo_tarea">  Titulo</string>
    <string name="fecha_tarea_text">Fecha</string>
    <string name="descripcion_tarea">Descripcion</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="estatus_tarea">Estatus</string>

    <!--DIALOGO OPCIONES-->
    <string name="mis_datos">Mis datos</string>
    <string name="editar_mis_datos">Editar mis datos</string>

</resources>
