<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sesioooooon"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_registro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/oscurillo"
            android:gravity="center"/>

        <ImageView
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:src="@drawable/appaplan"
            android:background="@color/oscurillo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"/>

        <!--Contenedor de formulario-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/bg_white"
            android:backgroundTint="@color/blancusco"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_datos"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="17sp"/>

            <!--Nombre-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                >
                <EditText
                    android:id="@+id/etNombresR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_nombre"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Apellido-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >
                <EditText
                    android:id="@+id/etApellidosR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_apellido"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Correo-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <EditText
                    android:id="@+id/etCorreosR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_correo"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Contraseña-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    >
                    <EditText
                        android:id="@+id/etContrasenaR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingrese_contrasena"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/btnVerContrasenaR"
                    android:layout_width="70dp"
                    android:layout_height="59dp"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:src="@drawable/contrasena"
                    android:clickable="true"
                    android:focusable="true" />
            </FrameLayout>
            <!--Contraseña repetida-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena_repetida"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    >
                    <EditText
                        android:id="@+id/etContrasenaRConfirmada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingrese_contrasena_repetida"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/btnVerContrasenaRConfirmada"
                    android:layout_width="70dp"
                    android:layout_height="59dp"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:src="@drawable/contrasena"
                    android:clickable="true"
                    android:focusable="true" />
            </FrameLayout>
            <!--Numero-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celular"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                >
                <EditText
                    android:id="@+id/etCelularR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingrese_celular"
                    android:inputType="number|phone"/>
            </com.google.android.material.textfield.TextInputLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnRegistrarR"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:paddingStart="40dp"
            android:drawableEnd="@drawable/icon_registro"
            android:text="@string/registrar"
            android:textSize="17sp"
            android:backgroundTint="@color/azul"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/tvIrlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/ir_login"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginBottom="100dp"
            android:textColor="@color/white"
            android:background="@color/oscurillo"
            />





    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>