<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SplashScreen"
    >
    <ImageView
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:src="@drawable/appaplan"
        android:paddingTop="10dp"
        android:contentDescription="@string/titulo_registro"
        />
    <ImageView
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:src="@drawable/gestorlotoblanco"
        android:contentDescription="@string/titulo_registro"
        android:layout_marginBottom="160dp"
        />
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="te.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_app"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="1dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrollador"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        />
</LinearLayout>