<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/sesioon"
    tools:context=".Clientes.EditarClientes">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/icon_back"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/editar_cliente"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white"
                android:orientation="vertical"
                android:padding="20dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tipo de Documento"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    />

                <Spinner
                    android:id="@+id/spinnerTipoDoc"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/spinner_background"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/tipo_documento"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etNumeroDocEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/num_documento"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etNombreClienteEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_cliente"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccion_tipo_cliente"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    />

                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_spinner_gris">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spTipoCliente"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:spinnerMode="dialog"/>

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etTelefonoEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/celular"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnActualizarCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/actualizar_cliente"
                    android:drawableEnd="@drawable/icon_ingresar"
                    android:layout_margin="30dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



</RelativeLayout>