<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/sesioon"
    tools:context=".MisDatos.EditarMisDatos">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/icon_back"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:gravity="center"
            android:text="@string/editar_mis_datos"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white"
                android:orientation="vertical"
                android:padding="20dp"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:src="@drawable/completado"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etNombreDatosEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etApellidoDatosEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etCorreoDatosEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <EditText
                            android:id="@+id/etContrasenaDatosEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contrasena"
                            android:inputType="textPassword"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <ImageView
                        android:id="@+id/btnVerContrasenaDatosEdit"
                        android:layout_width="70dp"
                        android:layout_height="59dp"
                        android:layout_gravity="end|bottom"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:src="@drawable/contrasena"
                        android:clickable="true"
                        android:focusable="true" />

                </FrameLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <EditText
                        android:id="@+id/etTelefonoDatosEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/celular"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnActualizarDatosUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/editar"
                    android:layout_margin="30dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>



</RelativeLayout>